--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "expo": "^27.0.1",
     "react": "16.3.1",
     "react-native": "~0.55.2",
+    "react-native-deck-swiper": "^1.5.16",
+    "react-native-swiper": "^1.5.13",
     "react-navigation": "^2.3.1"
   }
 }
